# AutoXuexiPlaywright

./: .gitignore  AutoXuexiPlaywrightGUI.pyw  AutoXuexiPlaywrightHeadless.py  CHANGELOG.md  MainUI.qss  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yaml  feature-request.yaml
.github/workflows/: build-package.yml  build-poetry-package.yml  push-to-techxuexi.yml  stale.yml  test-and-build.yml
AutoXuexiPlaywrightCore/: AutoXuexiPlaywrightCore.py  AutoXuexiPlaywrightDefines.py  AutoXuexiPlaywrightGUI.py  __init__.py
autoxuexiplaywright/: __init__.py  __main__.py  config.py  core.py  defines.py  events.py  languages.py  logger.py  sdk.py  storage.py
autoxuexiplaywright/asyncprocessor/: __init__.py  captchautils.py  defines.py  handle.py  login.py  operations.py
autoxuexiplaywright/core/: asyncprocessor.py  syncprocessor.py
autoxuexiplaywright/core/asyncprocessor/: __init__.py  asyncprocessor.py  captchautils.py  defines.py  handle.py  login.py  operations.py
autoxuexiplaywright/core/syncprocessor/: __init__.py  captchautils.py  defines.py  handle.py  login.py  operations.py
autoxuexiplaywright/defines/: core.py  events.py  selectors.py  types.py  ui.py  urls.py
autoxuexiplaywright/gui/: __init__.py  api.py  objects.py  settings.py  ui.py  windows.py
autoxuexiplaywright/processors/: __init__.py
autoxuexiplaywright/processors/async_api/: .test.py.kate-swp  __init__.py  captcha.py  login.py  read.py  task.py  test.py
autoxuexiplaywright/processors/common/: __init__.py  modules.py  selectors.py  urls.py
autoxuexiplaywright/processors/common/answer/: sources.py  utils.py
autoxuexiplaywright/processors/sync_api/: __init__.py  captcha.py  login.py  read.py  task.py  test.py
autoxuexiplaywright/resources/: README.txt  ui.qss
autoxuexiplaywright/resources/lang/: zh-cn.json
autoxuexiplaywright/sdk/: __init__.py  answer.py  module.py
autoxuexiplaywright/syncprocessor/: __init__.py  captchautils.py  defines.py  handle.py  login.py  operations.py
autoxuexiplaywright/utils/: answerutils.py  config.py  eventmanager.py  lang.py  logger.py  misc.py  modules.py  start.py  storage.py
resources/makepkg/: .gitignore  PKGBUILD  autoxuexiplaywright.desktop
resources/makepkg/autoxuexiplaywright/: PKGBUILD  autoxuexiplaywright.desktop  autoxuexiplaywright.metainfo.xml
resources/makepkg/python-ffmpeg-jonghwanhyeon/: PKGBUILD
samples/: test.as.py
scripts/: README.md  bump-and-tag  bump-version  format-all  test
tests/: test_autoxuexiplaywright.py  test_deserialize_and_serialize.py  test_find_event_by_id.py  test_get_language_string.py  test_get_set_runtime_config.py  test_is_valid_answer.py  test_lang_to_locale.py  test_question_async.py  test_question_sync.py  test_split_text.py  test_storages.py
tests/data/: extrakey.json  nokey.json  normal.json
