[tool.poetry]
name = "autoxuexiplaywright"
version = "3.0.8"
description = "A tool to finish something boring."
authors = ["Noob Zhang <17194552+zhanghua000@users.noreply.github.com>"]
license = "GPL"
packages = [{include = "autoxuexiplaywright"}]


[tool.poetry.scripts]
autoxuexiplaywright = "autoxuexiplaywright.__main__:main"


[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "sjtu"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pyzbar = "^0.1.9"
qrcode = {extras = ["pil"], version = "^7.3.1"}
playwright = "^1.41.1"
m3u8 = "^4.0.0"
python-magic = "^0.4.27"
python-ffmpeg = {version = "^2.0.10", optional = true}


[tool.poetry.group.gui]
optional = true


[tool.poetry.group.gui.dependencies]
pyside6 = "^6.6.1"


[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.5"
pytest-playwright = "^0.4.4"
autopep8 = "^2.0.4"
pytest = "^8.0.0"
pydocstyle = "^6.3.0"
isort = "^5.13.2"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
