[tool.poetry]
name = "autoxuexiplaywright"
version = "3.0.8"
description = "A tool to finish something boring."
authors = ["Noob Zhang <17194552+zhanghua000@users.noreply.github.com>"]
license = "GPL"
packages = [{include = "autoxuexiplaywright"}]

[tool.poetry.scripts]
autoxuexiplaywright = "autoxuexiplaywright.__main__:main"

[[tool.poetry.source]]
name = "bfsu"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "sjtu"
url = "https://mirror.sjtu.edu.cn/pypi/web/simple"
priority = "supplemental"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pyzbar = "^0.1.9"
qrcode = {extras = ["pil"], version = "^7.3.1"}
playwright = "^1.45.0"
m3u8 = "^5.1.0"
python-magic = "^0.4.27"
python-ffmpeg = {version = "^2.0.12", optional = true}

[tool.poetry.group.gui]
optional = true

[tool.poetry.group.gui.dependencies]
pyside6 = "^6.7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.7"
pytest-playwright = "^0.5.1"
pytest-cov = "^5.0.0"
pytest-ruff = "^0.3.2"

[tool.basedpyright]
venvPath="."
venv=".venv"
reportMissingImports = true
pythonPlatform = "All"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
# diagnostic rules
strictListInference = true
strictDictionaryInference = true
strictSetInference = true
reportMissingTypeStubs = "warning"
reportImportCycles = true
reportUninitializedInstanceVariable = "warning"
reportCallInDefaultInitializer = "warning"
reportImplicitStringConcatenation = true
reportUnusedCallResult = "information"
reportUnnecessaryTypeIgnoreComment = "information"
reportImplicitOverride = "information"
reportShadowedImports = "information"

[tool.pytest.ini_options]
addopts = "--cov=autoxuexiplaywright --ruff"
required_plugins = "pytest-ruff pytest-cov"

[tool.ruff]
builtins = ["_"]
line-length = 100
extend-exclude = ["__pycache__"]
output-format = "github"
required-version = ">=0.3.4"
target-version = "py311"

[tool.ruff.lint]
preview = true
select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle, Error, Warning
    "I", # isort
    "N", # pep8-naming
    "D", # pydocstyle
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "FIX", # flake8-fixme
    "ERA", # eradicate
    "PL", # Pylint
    "R", # Refactor
    "FLY", # flynt
    "FURB", # refurb
    "LOG", # flake8-logging
    "RUF" # Ruff specific
]
ignore = [
    "ANN101", # type for self
    "ANN102", # type for cls
    "PLW0603", # global statements
    "S311", # random is not secure
    "FIX002" # todo is not critical
]

[tool.ruff.lint.per-file-ignores]
# Import core or gui according to config
"autoxuexiplaywright/__init__.py" = ["PLC0415"]
# Function is too complex
"autoxuexiplaywright/config.py" = ["PLR0912"]
# classmethod returns instance
# NoSuchEventException cannot be fixed because compatibility reason.
"autoxuexiplaywright/events.py" = ["ANN206", "N818"]
# Import ctypes only on Windows
"autoxuexiplaywright/gui/__init__.py" = ["PLC0415"]
# follow Qt's name style
# Drawing UI requires many statements
"autoxuexiplaywright/gui/*.py" = ["N815", "N802", "N806", "PLR0915", "PLR0914"]
# _ObjectIDs, magic value
"autoxuexiplaywright/gui/windows.py" = ["RUF012", "PLR6301", "PLR2004"]
# NoSuchLanguageKeyException
"autoxuexiplaywright/languages.py" = ["N818"]
# Dynamic import objects
"autoxuexiplaywright/processors/__init__.py" = ["PLC0415"]
# Size of list, method is function
"autoxuexiplaywright/processors/**.py" = ["PLR6301", "PLR2004"]
# Nested block
"autoxuexiplaywright/processors/*/read.py" = ["PLR1702"]
# Dynamic import
"autoxuexiplaywright/processors/*/test.py" = ["PLC0415"]
# SQL is too long
"autoxuexiplaywright/processors/common/answer/sources.py" = ["E501"]
# empty functions
"autoxuexiplaywright/sdk/module.py" = ["B027"]
# Too many nested blocks
"autoxuexiplaywright/storage.py" = ["PLR1702"]
# tests are usually using assert and private objects
# pyright is not happy when using i.attr
# test __eq__ function should not be changed to ==
"tests/**.py" = ["S101", "PLC2701","B010", "PLC2801"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.isort]
force-single-line = true
length-sort = true
lines-after-imports = 2
no-sections = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
